2006-07-04  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl, c_src/expat_drv.c: Before namespaces, element
	names and attributes names are encoded as atom(), they're now checked
	against a list of known values. If they're not recognized, they're
	encoded as string(). Those checks can be disabled at runtime.

	* c_src/xmpp_{ns,names,attrs}.h.in: New files that contains a list
	of known namespaces, element names and attributes names, respectively.

	* c_src/xmpp_{ns,names,attrs}.h.awk: Awk script to convert the lists
	to C headers.

2006-07-03  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/exmpp_xml.erl (start_parser/1, handle_options/2): Error sent
	back by the port driver were ignored, it's now corrected.

	* c_src/contrib/hashtable.h, c_src/contrib/hashtable_private.h,
	c_src/hashtable.c: Imported an hashtable implementation which is used
	by the Expat port driver.

	* c_src/Makefile.am: Add hashtable sources to the Expat port driver.

	* c_src/expat_drv.c: Namespace prefixes are now stored in an hash
	table and set correctly in xmlnselement tuples.
	(expat_drv_control): Fixed a bug where the return value of
	create_parser() was not checked correctly.

	* testsuite/check_xml_parser.erl: Updated to handle namespace prefix
	support in the port driver. Also simplified each test cases.

2006-06-29  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* configure.ac: Fixed a bug with $EMKOPTS handling.
	Removed two debugging messages. Fixed a typo with `debug_info'.

	* src/exmpp_xml.erl: The function get_path_s/2 wasn't exported; also
	it now handles old path component format.
	(remove_attribute_from_list): Rewritten this completly broken
	function.
	(xmlnselement_to_xmlelement): Now handle properly default and prefixed
	namespaces for elements and attributes.
	(xmlnselement_to_xmlelement): Support for name as atom() was not
	present in the old format, so convert them as string. Fixed a bug when